{
    "name": "RobotActions",
    "maps": [
        {
            "name": "RobotControl",
            "id": "22e67eea-4e62-448f-812d-99a9b57f59d6",
            "actions": [
                {
                    "name": "RotateArmUp",
                    "type": "Button",
                    "id": "89212b74-d5bf-4a47-9597-f201fb895a90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExtendArm",
                    "type": "Button",
                    "id": "8980ec04-06a7-44d4-85a7-e5032ba8f7a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArmHome",
                    "type": "Button",
                    "id": "d8f63fa6-c07f-423b-9240-50b7b839776c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArmGridLevel1",
                    "type": "Button",
                    "id": "650e67d4-b254-49b0-a53b-56a4f942f50c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArmGridLevel2",
                    "type": "Button",
                    "id": "8580493f-6041-495e-9e62-05e4c5d75c6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArmGridLevel3",
                    "type": "Button",
                    "id": "2fceef5f-8b1f-494f-abd5-a58d3db64ccf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArmFloorPickup",
                    "type": "Button",
                    "id": "661ab50a-9860-499d-b986-130839fadb76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArmSubstationPickup",
                    "type": "Button",
                    "id": "2f50d07e-9ddb-4793-b5e7-f8f421535d5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleClaw",
                    "type": "Button",
                    "id": "7bbaca53-e9ae-4e0c-be3e-3b484b6c8201",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AutoSteer",
                    "type": "Button",
                    "id": "a323ab9b-1ad5-4f08-aba4-a7921e1d5f1f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drive2",
                    "type": "Button",
                    "id": "1c9ac0e1-05f4-4b35-b3e9-5ae03e3f7819",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn",
                    "type": "Button",
                    "id": "afd07d66-2ca1-4e0b-8122-c8fa82fcec9d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Turn2",
                    "type": "Button",
                    "id": "0b9b5be8-f78f-4088-958b-c3f69d3a12f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddCone",
                    "type": "Button",
                    "id": "5d48078f-60f3-4678-b98f-ae23129e3f0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddCube",
                    "type": "Button",
                    "id": "340f68c2-1384-40dd-9bd1-d13a590944c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AutoBalance",
                    "type": "Button",
                    "id": "7ab3059d-57ce-4a95-bbfc-c83f73780fb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "8f988931-3928-42f6-be0e-5e72b0ae635b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateArmUp",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "99163b50-c93e-4b6b-9eb7-c85df199211c",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Operator",
                    "action": "RotateArmUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "90bcfed7-5189-425f-baf5-c6c546263e2a",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Operator",
                    "action": "RotateArmUp",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "b7183b79-bf4d-414a-a2df-66f657699ba9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExtendArm",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c19ee8d9-fedc-4549-9230-090787f2e8ab",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Operator",
                    "action": "ExtendArm",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cb04093e-cb49-4564-91c5-1f86af614f83",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Operator",
                    "action": "ExtendArm",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cd8911f2-ef50-4701-b662-a6381f44f505",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8788c765-f6ca-46d1-89c5-d4727d29d44b",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50beb03d-4a3d-4eea-85fa-1ae609468585",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmGridLevel1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02b81152-0b24-4d55-80f7-36e763303f2a",
                    "path": "<HID::Unknown Xbox Adaptive Controller>/button14",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmGridLevel1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb1d828e-d089-4112-9ab2-2b70092755fb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmGridLevel2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85affcb5-01d9-46a7-a4e1-c644fb3d89b0",
                    "path": "<HID::Unknown Xbox Adaptive Controller>/button22",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmGridLevel2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd1b68af-4cb1-45ea-b9e4-3acb905a79e2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmGridLevel3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ddcda6f-b8e3-4f42-8cdb-ee2b0890684c",
                    "path": "<HID::Unknown Xbox Adaptive Controller>/button19",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmGridLevel3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed662f1b-3d22-4bd4-93ec-981561f8d23a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmFloorPickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "769c0c75-a1c5-4f76-8e09-8daf53e2dac1",
                    "path": "<HID::Unknown Xbox Adaptive Controller>/button23",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmFloorPickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fb85cb4-af96-466e-b1a2-f13a72ccbb16",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmSubstationPickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db3e726c-6d0b-4443-9bd8-f5772e511af6",
                    "path": "<HID::Unknown Xbox Adaptive Controller>/button15",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArmSubstationPickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2511fb8-a29e-477b-9a37-ec0cd35d3e0a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleClaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a031bd7-912a-4ef0-82f0-6677d4a1edc0",
                    "path": "<HID::Logitech Logitech Dual Action>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Driver",
                    "action": "ToggleClaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bef8518-9718-4f8c-9840-239a0381e4ba",
                    "path": "<HID::Unknown Xbox Adaptive Controller>/button20",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleClaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "610bfd4d-763a-4034-85aa-7b723103fd21",
                    "path": "<HID::Logitech Logitech Dual Action>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Driver",
                    "action": "AutoSteer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "b5014c3e-485b-4dda-a7c7-4594d6870fd6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "db74b7db-3a6c-4ad3-9b80-429887ccc772",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d6586994-5735-4145-84d6-b9cff5fb3667",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Driver",
                    "action": "Drive2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "40a697a3-9e13-46f3-ad83-c69363c873d8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Turn",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f5b94395-2732-4495-8d22-05a24210d502",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Driver",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a4f8c81f-b5ed-430b-abd9-b30b07ee6280",
                    "path": "<HID::Logitech Logitech Dual Action>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Driver",
                    "action": "Turn",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7ace1e72-55ca-440d-b966-e85003d55834",
                    "path": "<HID::Logitech Logitech Dual Action>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Driver",
                    "action": "Turn2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "572a3b15-daad-4bc6-a94f-10618250cc67",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "Operator",
                    "action": "AddCone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aba4e271-8c5f-473d-91a7-9a321a327a29",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "Operator",
                    "action": "AddCube",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a8895ae-4f0f-42ac-86f4-382c6f4cccfd",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoBalance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8273a3a0-6d42-4b31-944f-00ec59dba704",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoBalance",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Operator",
            "bindingGroup": "Operator",
            "devices": [
                {
                    "devicePath": "<HID::Logitech Logitech Dual Action>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Driver",
            "bindingGroup": "Driver",
            "devices": [
                {
                    "devicePath": "<HID::Logitech Logitech Dual Action>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}